# Real-Time-ML-Inference-Pipeline

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  latency_benchmark.cpp  memory_benchmark.cpp
examples/: CMakeLists.txt  component_demo.cpp
include/: cuda_inference.hpp  inference_pipeline.hpp  lockfree_queue.hpp  memory_pool.hpp  scheduler.hpp  timing.hpp
src/: CMakeLists.txt  cuda_inference.cu  cuda_inference_cpu.cpp  inference_pipeline.cpp  main.cpp  scheduler.cpp  timing.cpp
tests/: CMakeLists.txt
